// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomepageComponent prints out the user's name when it is provided 1`] = `
<div
  id="homepage"
>
  <section
    id="call-to-action"
  >
    <Row
      tag="div"
    >
      <Col
        md={6}
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Row
          tag="div"
        >
          <Col
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <h1>
              Welcome Alan!
            </h1>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla feugiat lorem nisl, sed convallis dui lobortis volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla feugiat lorem nisl, sed convallis dui lobortis volutpat.
            </p>
          </Col>
        </Row>
        <Row
          tag="div"
        >
          <Col
            size={6}
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Button
              block={true}
              color="primary"
              tag={[Function]}
              to="/topics"
            >
              Find a topic
            </Button>
          </Col>
          <Col
            size={6}
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Button
              block={true}
              color="dark"
              outline={true}
              tag={[Function]}
              to="/events"
            >
              Find an event
            </Button>
          </Col>
        </Row>
      </Col>
      <Col
        md={6}
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <img
          alt="Students illustration"
          className="img-fluid"
          src="/assets/ics_hero.svg"
        />
      </Col>
    </Row>
  </section>
  <section
    className="px-5 py-4"
    id="headline-content"
  >
    <h3>
      Featured-question
    </h3>
    <Row
      className="p-1"
      tag="div"
    >
      <Col
        md={6}
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p
          className="font-weight-bold"
        >
          Trace the pseudocode and enter the output that will be produced when the program is run
        </p>
        <pre
          className="text-monospace"
        >
          SUBROUTINE increase_num()
    num2 ← 2
    num1 ← num2 + 5
    num2 ← 13
ENDSUBROUTINE

num1 ← 4
num2 ← 10

increase_num()

num3 ← 4

OUTPUT num1 + num2 + num3
        </pre>
      </Col>
      <Col
        md={6}
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="text-center"
        >
          <img
            alt="Student illustration"
            className="img-fluid"
            src="/assets/ics_spot.svg"
          />
        </div>
      </Col>
    </Row>
  </section>
  <section
    id="events"
  >
    <Row
      tag="div"
    >
      <Col
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <h1
          className="text-center"
        >
          We run events
        </h1>
        <hr />
      </Col>
    </Row>
    <Row
      tag="div"
    >
      <Col
        md={
          Object {
            "offset": 3,
            "size": 6,
          }
        }
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p
          className="text-center"
        >
          We have a number of events throughout the year. Below you can see a snapshot of some of the events we run. On our events page you will see more, and see how you can sign up for more information or sign up to events themselves.
        </p>
      </Col>
    </Row>
    <Row
      tag="div"
    >
      <Col
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <CardDeck
          tag="div"
        >
          <Card
            tag="div"
          >
            <div
              className="text-center"
            >
              <CardImg
                alt="Teacher event illustration"
                src="assets/event-1.png"
                tag="img"
                top={true}
              />
            </div>
            <CardBody
              tag="div"
            >
              <CardTitle
                className="font-weight-bold"
                tag="div"
              >
                Teacher Workshop
              </CardTitle>
              <CardText
                tag="p"
              >
                Embedding isaaccomputerscience in your teaching
              </CardText>
              <CardText
                tag="p"
              >
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    When:
                  </span>
                   
                   
                   Wed 27 Mar 2019
                </span>
                <span
                  className="d-block"
                >
                  12:00 PM — 4:00 PM
                </span>
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    Location:
                  </span>
                   
                   
                   NUSTEM, Northumbria
                </span>
              </CardText>
              <CardText
                tag="p"
              >
                <Link
                  to="event/event1"
                >
                  View Details
                </Link>
              </CardText>
            </CardBody>
          </Card>
          <Card
            tag="div"
          >
            <div
              className="text-center"
            >
              <CardImg
                alt="CPD event illustration"
                src="assets/event-2.png"
                tag="img"
                top={true}
              />
            </div>
            <CardBody
              tag="div"
            >
              <CardTitle
                className="font-weight-bold"
                tag="div"
              >
                Virtual teacher CPD
              </CardTitle>
              <CardText
                tag="p"
              >
                Introduction to teaching with isaaccomputerscience.org
              </CardText>
              <CardText
                tag="p"
              >
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    When:
                  </span>
                   
                   
                   Wed 3 Apr 2019
                </span>
                <span
                  className="d-block"
                >
                  12:00 PM — 13:00 PM
                </span>
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    Location:
                  </span>
                   
                   
                   Online
                </span>
              </CardText>
              <CardText
                tag="p"
              >
                <Link
                  to="event/event1"
                >
                  View Details
                </Link>
              </CardText>
            </CardBody>
          </Card>
          <Card
            tag="div"
          >
            <div
              className="text-center"
            >
              <CardImg
                alt="Teacher event illustration"
                src="assets/event-3.png"
                tag="img"
                top={true}
              />
            </div>
            <CardBody
              tag="div"
            >
              <CardTitle
                className="font-weight-bold"
                tag="div"
              >
                Student Workshop
              </CardTitle>
              <CardText
                tag="p"
              >
                Problem Solving with Vectors
              </CardText>
              <CardText
                tag="p"
              >
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    When:
                  </span>
                   
                   
                   Wed 27 Mar 2019
                </span>
                <span
                  className="d-block"
                >
                  5:30 PM — 7:30 PM
                </span>
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    Location:
                  </span>
                   
                   
                   Abbey College, Cambridge
                </span>
              </CardText>
              <CardText
                tag="p"
              >
                <Link
                  to="event/event1"
                >
                  View Details
                </Link>
              </CardText>
            </CardBody>
          </Card>
        </CardDeck>
      </Col>
    </Row>
  </section>
</div>
`;

exports[`HomepageComponent renders correctly with a null valued user 1`] = `
<div
  id="homepage"
>
  <section
    id="call-to-action"
  >
    <Row
      tag="div"
    >
      <Col
        md={6}
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Row
          tag="div"
        >
          <Col
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <h1>
              A-level Computer Science Learning
            </h1>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla feugiat lorem nisl, sed convallis dui lobortis volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla feugiat lorem nisl, sed convallis dui lobortis volutpat.
            </p>
          </Col>
        </Row>
        <Row
          tag="div"
        >
          <Col
            size={6}
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Button
              block={true}
              color="primary"
              tag={[Function]}
              to="/register"
            >
              Sign up
            </Button>
          </Col>
          <Col
            size={6}
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Button
              block={true}
              color="dark"
              outline={true}
              tag={[Function]}
              to="/login"
            >
              Log in
            </Button>
          </Col>
        </Row>
      </Col>
      <Col
        md={6}
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <img
          alt="Students illustration"
          className="img-fluid"
          src="/assets/ics_hero.svg"
        />
      </Col>
    </Row>
  </section>
  <hr />
  <section
    id="why-sign-up"
  >
    <h1
      className="text-center"
    >
      Why sign up?
    </h1>
    <Row
      tag="div"
    >
      <Col
        md={6}
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Card
          tag="div"
        >
          <CardBody
            tag="div"
          >
            <CardTitle
              tag="h2"
            >
              Benefits for
               
              <span
                className="text-primary"
              >
                teachers
              </span>
            </CardTitle>
            <ul>
              <li>
                Easy to set homework
              </li>
              <li>
                Easy to check homework
              </li>
              <li>
                See progress
              </li>
              <li>
                Managing different classes
              </li>
              <li>
                Increase in pass rate
              </li>
              <li>
                Syllabus information
              </li>
              <li>
                Teachers Events
              </li>
            </ul>
          </CardBody>
        </Card>
      </Col>
      <Col
        md={6}
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Card
          tag="div"
        >
          <CardBody
            tag="div"
          >
            <CardTitle
              tag="h2"
            >
              Benefits for
               
              <span
                className="text-primary"
              >
                students
              </span>
            </CardTitle>
            <ul>
              <li>
                Easy to set homework
              </li>
              <li>
                Easy to check homework
              </li>
              <li>
                See progress
              </li>
              <li>
                Managing different classes
              </li>
              <li>
                Increase in pass rate
              </li>
              <li>
                Syllabus information
              </li>
              <li>
                Student Events
              </li>
            </ul>
          </CardBody>
        </Card>
      </Col>
    </Row>
  </section>
  <section
    className="px-5 py-4"
    id="headline-content"
  >
    <h3>
      Featured-question
    </h3>
    <Row
      className="p-1"
      tag="div"
    >
      <Col
        md={6}
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p
          className="font-weight-bold"
        >
          Trace the pseudocode and enter the output that will be produced when the program is run
        </p>
        <pre
          className="text-monospace"
        >
          SUBROUTINE increase_num()
    num2 ← 2
    num1 ← num2 + 5
    num2 ← 13
ENDSUBROUTINE

num1 ← 4
num2 ← 10

increase_num()

num3 ← 4

OUTPUT num1 + num2 + num3
        </pre>
      </Col>
      <Col
        md={6}
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="text-center"
        >
          <img
            alt="Student illustration"
            className="img-fluid"
            src="/assets/ics_spot.svg"
          />
        </div>
      </Col>
    </Row>
  </section>
  <section
    id="events"
  >
    <Row
      tag="div"
    >
      <Col
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <h1
          className="text-center"
        >
          We run events
        </h1>
        <hr />
      </Col>
    </Row>
    <Row
      tag="div"
    >
      <Col
        md={
          Object {
            "offset": 3,
            "size": 6,
          }
        }
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p
          className="text-center"
        >
          We have a number of events throughout the year. Below you can see a snapshot of some of the events we run. On our events page you will see more, and see how you can sign up for more information or sign up to events themselves.
        </p>
      </Col>
    </Row>
    <Row
      tag="div"
    >
      <Col
        size={12}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <CardDeck
          tag="div"
        >
          <Card
            tag="div"
          >
            <div
              className="text-center"
            >
              <CardImg
                alt="Teacher event illustration"
                src="assets/event-1.png"
                tag="img"
                top={true}
              />
            </div>
            <CardBody
              tag="div"
            >
              <CardTitle
                className="font-weight-bold"
                tag="div"
              >
                Teacher Workshop
              </CardTitle>
              <CardText
                tag="p"
              >
                Embedding isaaccomputerscience in your teaching
              </CardText>
              <CardText
                tag="p"
              >
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    When:
                  </span>
                   
                   
                   Wed 27 Mar 2019
                </span>
                <span
                  className="d-block"
                >
                  12:00 PM — 4:00 PM
                </span>
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    Location:
                  </span>
                   
                   
                   NUSTEM, Northumbria
                </span>
              </CardText>
              <CardText
                tag="p"
              >
                <Link
                  to="event/event1"
                >
                  View Details
                </Link>
              </CardText>
            </CardBody>
          </Card>
          <Card
            tag="div"
          >
            <div
              className="text-center"
            >
              <CardImg
                alt="CPD event illustration"
                src="assets/event-2.png"
                tag="img"
                top={true}
              />
            </div>
            <CardBody
              tag="div"
            >
              <CardTitle
                className="font-weight-bold"
                tag="div"
              >
                Virtual teacher CPD
              </CardTitle>
              <CardText
                tag="p"
              >
                Introduction to teaching with isaaccomputerscience.org
              </CardText>
              <CardText
                tag="p"
              >
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    When:
                  </span>
                   
                   
                   Wed 3 Apr 2019
                </span>
                <span
                  className="d-block"
                >
                  12:00 PM — 13:00 PM
                </span>
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    Location:
                  </span>
                   
                   
                   Online
                </span>
              </CardText>
              <CardText
                tag="p"
              >
                <Link
                  to="event/event1"
                >
                  View Details
                </Link>
              </CardText>
            </CardBody>
          </Card>
          <Card
            tag="div"
          >
            <div
              className="text-center"
            >
              <CardImg
                alt="Teacher event illustration"
                src="assets/event-3.png"
                tag="img"
                top={true}
              />
            </div>
            <CardBody
              tag="div"
            >
              <CardTitle
                className="font-weight-bold"
                tag="div"
              >
                Student Workshop
              </CardTitle>
              <CardText
                tag="p"
              >
                Problem Solving with Vectors
              </CardText>
              <CardText
                tag="p"
              >
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    When:
                  </span>
                   
                   
                   Wed 27 Mar 2019
                </span>
                <span
                  className="d-block"
                >
                  5:30 PM — 7:30 PM
                </span>
                <span
                  className="d-block"
                >
                  <span
                    className="font-weight-bold"
                  >
                    Location:
                  </span>
                   
                   
                   Abbey College, Cambridge
                </span>
              </CardText>
              <CardText
                tag="p"
              >
                <Link
                  to="event/event1"
                >
                  View Details
                </Link>
              </CardText>
            </CardBody>
          </Card>
        </CardDeck>
      </Col>
    </Row>
  </section>
</div>
`;
